# memecoin-prediction-market

./: Anchor.toml  README.md  package-lock.json  package.json
programs/memecoin-prediction-market/: Cargo.toml
programs/memecoin-prediction-market/src/: errors.rs  lib.rs
programs/memecoin-prediction-market/src/prediction/: create_proposal.rs  credit_bank.rs  credit_winner.rs  initialize_bank.rs  make_prediction.rs  mod.rs  settle_proposal.rs
tests/: memecoin-prediction-market.ts
